# Advanced-RAG-Flow

./: ingestion.py  main.py  pyproject.toml
graph/: graph.py
graph/chains/: hallucination_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  web_search.py
